sudoku-rs/src/solver/strategic/snapshots/sudoku__solver__strategic__tests__snapshots__solve_path__base_2_sample_1.snap
---
source: sudoku-rs/src/solver/strategic/mod.rs
expression: solve_steps
---
- strategy: NakedSingles
  deductions:
    deductions:
      - reasons:
          - position:
              row: 0
              column: 3
            candidates:
              - 3
        actions:
          - position:
              row: 0
              column: 3
            setValue: 3
      - reasons:
          - position:
              row: 3
              column: 2
            candidates:
              - 3
        actions:
          - position:
              row: 3
              column: 2
            setValue: 3
- strategy: NakedSingles
  deductions:
    deductions:
      - reasons:
          - position:
              row: 0
              column: 1
            candidates:
              - 2
        actions:
          - position:
              row: 0
              column: 1
            setValue: 2
      - reasons:
          - position:
              row: 1
              column: 3
            candidates:
              - 1
        actions:
          - position:
              row: 1
              column: 3
            setValue: 1
      - reasons:
          - position:
              row: 2
              column: 2
            candidates:
              - 1
        actions:
          - position:
              row: 2
              column: 2
            setValue: 1
      - reasons:
          - position:
              row: 3
              column: 0
            candidates:
              - 4
        actions:
          - position:
              row: 3
              column: 0
            setValue: 4
- strategy: NakedSingles
  deductions:
    deductions:
      - reasons:
          - position:
              row: 1
              column: 0
            candidates:
              - 3
        actions:
          - position:
              row: 1
              column: 0
            setValue: 3
      - reasons:
          - position:
              row: 1
              column: 2
            candidates:
              - 2
        actions:
          - position:
              row: 1
              column: 2
            setValue: 2
      - reasons:
          - position:
              row: 2
              column: 1
            candidates:
              - 3
        actions:
          - position:
              row: 2
              column: 1
            setValue: 3
      - reasons:
          - position:
              row: 2
              column: 3
            candidates:
              - 4
        actions:
          - position:
              row: 2
              column: 3
            setValue: 4
- strategy: NakedSingles
  deductions:
    deductions:
      - reasons:
          - position:
              row: 1
              column: 1
            candidates:
              - 4
        actions:
          - position:
              row: 1
              column: 1
            setValue: 4
      - reasons:
          - position:
              row: 2
              column: 0
            candidates:
              - 2
        actions:
          - position:
              row: 2
              column: 0
            setValue: 2
