sudoku-rs/src/solver/strategic/snapshots/sudoku__solver__strategic__tests__snapshots__solve_path__base_3_sample_4.snap
---
source: sudoku-rs/src/solver/strategic/mod.rs
expression: solve_steps
---
- strategy: NakedSingles
  deductions:
    deductions:
      - reasons:
          - position:
              row: 2
              column: 8
            candidates:
              - 5
        actions:
          - position:
              row: 2
              column: 8
            setValue: 5
      - reasons:
          - position:
              row: 4
              column: 3
            candidates:
              - 5
        actions:
          - position:
              row: 4
              column: 3
            setValue: 5
      - reasons:
          - position:
              row: 4
              column: 5
            candidates:
              - 9
        actions:
          - position:
              row: 4
              column: 5
            setValue: 9
      - reasons:
          - position:
              row: 6
              column: 0
            candidates:
              - 2
        actions:
          - position:
              row: 6
              column: 0
            setValue: 2
      - reasons:
          - position:
              row: 6
              column: 1
            candidates:
              - 8
        actions:
          - position:
              row: 6
              column: 1
            setValue: 8
      - reasons:
          - position:
              row: 6
              column: 6
            candidates:
              - 3
        actions:
          - position:
              row: 6
              column: 6
            setValue: 3
      - reasons:
          - position:
              row: 7
              column: 3
            candidates:
              - 2
        actions:
          - position:
              row: 7
              column: 3
            setValue: 2
      - reasons:
          - position:
              row: 8
              column: 1
            candidates:
              - 4
        actions:
          - position:
              row: 8
              column: 1
            setValue: 4
      - reasons:
          - position:
              row: 8
              column: 4
            candidates:
              - 9
        actions:
          - position:
              row: 8
              column: 4
            setValue: 9
- strategy: NakedSingles
  deductions:
    deductions:
      - reasons:
          - position:
              row: 1
              column: 6
            candidates:
              - 6
        actions:
          - position:
              row: 1
              column: 6
            setValue: 6
      - reasons:
          - position:
              row: 3
              column: 3
            candidates:
              - 6
        actions:
          - position:
              row: 3
              column: 3
            setValue: 6
      - reasons:
          - position:
              row: 4
              column: 0
            candidates:
              - 4
        actions:
          - position:
              row: 4
              column: 0
            setValue: 4
      - reasons:
          - position:
              row: 5
              column: 1
            candidates:
              - 6
        actions:
          - position:
              row: 5
              column: 1
            setValue: 6
      - reasons:
          - position:
              row: 5
              column: 6
            candidates:
              - 4
        actions:
          - position:
              row: 5
              column: 6
            setValue: 4
      - reasons:
          - position:
              row: 6
              column: 7
            candidates:
              - 1
        actions:
          - position:
              row: 6
              column: 7
            setValue: 1
      - reasons:
          - position:
              row: 7
              column: 0
            candidates:
              - 9
        actions:
          - position:
              row: 7
              column: 0
            setValue: 9
      - reasons:
          - position:
              row: 7
              column: 4
            candidates:
              - 1
        actions:
          - position:
              row: 7
              column: 4
            setValue: 1
      - reasons:
          - position:
              row: 8
              column: 2
            candidates:
              - 7
        actions:
          - position:
              row: 8
              column: 2
            setValue: 7
      - reasons:
          - position:
              row: 8
              column: 5
            candidates:
              - 3
        actions:
          - position:
              row: 8
              column: 5
            setValue: 3
- strategy: NakedSingles
  deductions:
    deductions:
      - reasons:
          - position:
              row: 0
              column: 3
            candidates:
              - 3
        actions:
          - position:
              row: 0
              column: 3
            setValue: 3
      - reasons:
          - position:
              row: 1
              column: 0
            candidates:
              - 3
        actions:
          - position:
              row: 1
              column: 0
            setValue: 3
      - reasons:
          - position:
              row: 1
              column: 1
            candidates:
              - 1
        actions:
          - position:
              row: 1
              column: 1
            setValue: 1
      - reasons:
          - position:
              row: 1
              column: 7
            candidates:
              - 2
        actions:
          - position:
              row: 1
              column: 7
            setValue: 2
      - reasons:
          - position:
              row: 2
              column: 0
            candidates:
              - 6
        actions:
          - position:
              row: 2
              column: 0
            setValue: 6
      - reasons:
          - position:
              row: 2
              column: 3
            candidates:
              - 4
        actions:
          - position:
              row: 2
              column: 3
            setValue: 4
      - reasons:
          - position:
              row: 2
              column: 4
            candidates:
              - 8
        actions:
          - position:
              row: 2
              column: 4
            setValue: 8
      - reasons:
          - position:
              row: 2
              column: 6
            candidates:
              - 9
        actions:
          - position:
              row: 2
              column: 6
            setValue: 9
      - reasons:
          - position:
              row: 3
              column: 5
            candidates:
              - 8
        actions:
          - position:
              row: 3
              column: 5
            setValue: 8
      - reasons:
          - position:
              row: 4
              column: 2
            candidates:
              - 1
        actions:
          - position:
              row: 4
              column: 2
            setValue: 1
      - reasons:
          - position:
              row: 4
              column: 7
            candidates:
              - 7
        actions:
          - position:
              row: 4
              column: 7
            setValue: 7
      - reasons:
          - position:
              row: 5
              column: 5
            candidates:
              - 2
        actions:
          - position:
              row: 5
              column: 5
            setValue: 2
      - reasons:
          - position:
              row: 5
              column: 8
            candidates:
              - 3
        actions:
          - position:
              row: 5
              column: 8
            setValue: 3
      - reasons:
          - position:
              row: 7
              column: 6
            candidates:
              - 7
        actions:
          - position:
              row: 7
              column: 6
            setValue: 7
      - reasons:
          - position:
              row: 7
              column: 8
            candidates:
              - 4
        actions:
          - position:
              row: 7
              column: 8
            setValue: 4
      - reasons:
          - position:
              row: 8
              column: 6
            candidates:
              - 5
        actions:
          - position:
              row: 8
              column: 6
            setValue: 5
      - reasons:
          - position:
              row: 8
              column: 7
            candidates:
              - 6
        actions:
          - position:
              row: 8
              column: 7
            setValue: 6
- strategy: NakedSingles
  deductions:
    deductions:
      - reasons:
          - position:
              row: 0
              column: 2
            candidates:
              - 8
        actions:
          - position:
              row: 0
              column: 2
            setValue: 8
      - reasons:
          - position:
              row: 0
              column: 4
            candidates:
              - 2
        actions:
          - position:
              row: 0
              column: 4
            setValue: 2
      - reasons:
          - position:
              row: 0
              column: 5
            candidates:
              - 6
        actions:
          - position:
              row: 0
              column: 5
            setValue: 6
      - reasons:
          - position:
              row: 1
              column: 2
            candidates:
              - 4
        actions:
          - position:
              row: 1
              column: 2
            setValue: 4
      - reasons:
          - position:
              row: 1
              column: 4
            candidates:
              - 5
        actions:
          - position:
              row: 1
              column: 4
            setValue: 5
      - reasons:
          - position:
              row: 1
              column: 5
            candidates:
              - 7
        actions:
          - position:
              row: 1
              column: 5
            setValue: 7
      - reasons:
          - position:
              row: 2
              column: 5
            candidates:
              - 1
        actions:
          - position:
              row: 2
              column: 5
            setValue: 1
      - reasons:
          - position:
              row: 3
              column: 1
            candidates:
              - 5
        actions:
          - position:
              row: 3
              column: 1
            setValue: 5
      - reasons:
          - position:
              row: 3
              column: 2
            candidates:
              - 3
        actions:
          - position:
              row: 3
              column: 2
            setValue: 3
      - reasons:
          - position:
              row: 3
              column: 8
            candidates:
              - 1
        actions:
          - position:
              row: 3
              column: 8
            setValue: 1
      - reasons:
          - position:
              row: 5
              column: 2
            candidates:
              - 9
        actions:
          - position:
              row: 5
              column: 2
            setValue: 9
      - reasons:
          - position:
              row: 7
              column: 7
            candidates:
              - 8
        actions:
          - position:
              row: 7
              column: 7
            setValue: 8
